# reading-lamp

./: index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  embeddings.rs  epub_parser.rs  lib.rs  main.rs  search.rs
src/components/: BookLoader.tsx  ChatInterface.tsx  ContextPrompt.tsx  Library.tsx  Onboarding.tsx  PositionContext.tsx  Settings.tsx  Toast.tsx
src/lib/: tauri.ts  types.ts
