[package]
name = "reading_lamp"
version = "0.1.0"
description = "Sidecar eBook Chat Assistant - AI-powered literary analysis alongside any eBook reader"
authors = ["you"]
edition = "2021"

[lib]
name = "reading_lamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# EPUB parsing
epub = "2"
html2text = "0.14"

# Full-text search
tantivy = "0.24"

# Fuzzy string matching
strsim = "0.11"

# SQLite database
rusqlite = { version = "0.35", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async streaming
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing for content fingerprint
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
regex = "1"

# Temp directory for search index
tempfile = "3"

# Base64 encoding for cover images
base64 = "0.22"

# Cross-platform directories
dirs = "5"
window-vibrancy = "0.7.1"
